V10LIB/FUENTES/FORMS/bison.output
Terminals unused in grammar

   FTRIGER
   LISTA
   LEXEOF
   TITULOCAMPO


Gramática

    0 $accept: modulo $end

    1 modulo: lista_frm
    2       | menu
    3       | cuerpo_bloque

    4 lista_frm: definidor_frm lista_frm
    5          | /* vacío */

    6 definidor_frm: definidor_campo
    7              | triger_form
    8              | INCLUDECSS '=' cadena_parser
    9              | INCLUDEFICHEROCSS '=' cadena_parser
   10              | INCLUDEHTML '=' cadena_parser
   11              | INCLUDEFICHEROHTML '=' cadena_parser
   12              | definidor_bloque

   13 triger_form: PREFORM '=' definidor_triger
   14            | POSTFORM '=' definidor_triger
   15            | PRECOMMIT '=' definidor_triger
   16            | POSTCOMMIT '=' definidor_triger
   17            | PREROLLBACK '=' definidor_triger
   18            | POSTROLLBACK '=' definidor_triger

   19 unacadena_parser: LEXCADENA
   20                 | LEXCADENA cadena_parser

   21 cadena_parser: unacadena_parser

   22 texto_sql: TEXTO_SQL

   23 definidor_campo: nombre_campo modificadores_campo

   24 nombrecampo: IDENTIFICADOR
   25            | CAMPO
   26            | TABLA
   27            | FICHERO

   28 nombre_campo: CAMPO '=' nombrecampo

   29 definidor_bloque: nombre_bloque cuerpo_bloque ENDBLOQUE
   30                 | nombre_bloqueinter modificadores_bloque ENDBLOQUE
   31                 | nombre_bloquepan cuerpo_bloque ENDBLOQUE

   32 nombre_bloqueinter: BEGINBLOQUEFRM '=' IDENTIFICADOR

   33 nombre_bloquepan: BEGINBLOQUEPAN '=' IDENTIFICADOR

   34 nombre_bloque: BEGINBLOQUE '=' IDENTIFICADOR

   35 pintado_pantalla: PINTADO_PANTALLA

   36 cuerpo_bloque: pintado_pantalla modificadores_bloque

   37 modificadores_bloque: modificadores_bloque modificador_bloque
   38                     | /* vacío */

   39 nombre_tecla: IDENTIFICADOR
   40             | NUMERO

   41 modificador_bloque: PADRE '=' IDENTIFICADOR
   42                   | TABLA '=' IDENTIFICADOR
   43                   | TABLA '=' IDENTIFICADOR IDENTIFICADOR
   44                   | EXTRAPARSER '(' cadena_parser ',' cadena_parser ')'
   45                   | NOROWID
   46                   | POSX '=' NUMERO
   47                   | POSY '=' NUMERO
   48                   | INCLUDETDCSS '=' cadena_parser
   49                   | INCLUDECSS '=' cadena_parser
   50                   | INCLUDEFICHEROCSS '=' cadena_parser
   51                   | INCLUDEHTML '=' cadena_parser
   52                   | INCLUDEFICHEROHTML '=' cadena_parser
   53                   | WMARCOFRAME
   54                   | WMARCOPESTANNA
   55                   | WSINMARCO
   56                   | WPLEGADO
   57                   | WDESPLEGADO
   58                   | WPOSX '=' NUMERO
   59                   | WPOSY '=' NUMERO
   60                   | WLONX '=' NUMERO
   61                   | WLONY '=' NUMERO
   62                   | WREGPAG '=' NUMERO
   63                   | WPIXELX '=' NUMERO
   64                   | WPIXELY '=' NUMERO
   65                   | WFRAME '(' NUMERO ',' NUMERO ',' NUMERO ',' NUMERO ',' cadena_parser ',' cadena_parser ')'
   66                   | LEXCOLOR '=' IDENTIFICADOR
   67                   | UPPER
   68                   | LOWER
   69                   | MIXED
   70                   | definidor_titulo
   71                   | REGPAG '=' NUMERO
   72                   | TIMEOUT '=' definidor_triger ',' NUMERO
   73                   | PRETECLA '=' nombre_tecla ',' definidor_triger
   74                   | POSTTECLA '=' nombre_tecla ',' definidor_triger
   75                   | TECLA '=' nombre_tecla ',' definidor_triger
   76                   | proteccion_bloque
   77                   | modificador_oracle
   78                   | AQUERY
   79                   | PQUERY
   80                   | TQUERY
   81                   | SOLOQUERY
   82                   | modificador_online
   83                   | definidor_campo
   84                   | definidor_cursor
   85                   | PREINSERT '=' definidor_triger
   86                   | CONTEXTUAL '=' definidor_triger
   87                   | POSTINSERT '=' definidor_triger
   88                   | PREUPDATE '=' definidor_triger
   89                   | POSTUPDATE '=' definidor_triger
   90                   | PREDELETE '=' definidor_triger
   91                   | POSTDELETE '=' definidor_triger
   92                   | FINQUERY '=' definidor_triger
   93                   | PREBLOQUE '=' definidor_triger
   94                   | POSTBLOQUE '=' definidor_triger
   95                   | PREQUERY '=' definidor_triger
   96                   | POSTQUERY '=' definidor_triger
   97                   | PREREGISTRO '=' definidor_triger
   98                   | POSTREGISTRO '=' definidor_triger
   99                   | PRECOMMIT '=' definidor_triger
  100                   | POSTCOMMIT '=' definidor_triger
  101                   | PREROLLBACK '=' definidor_triger
  102                   | POSTROLLBACK '=' definidor_triger
  103                   | PREPINTA '=' definidor_triger
  104                   | POSTPINTA '=' definidor_triger
  105                   | ONPINTA '=' definidor_triger
  106                   | ONCLICK '=' definidor_triger
  107                   | ONRIGHTCLICK '=' definidor_triger
  108                   | ONCENTERCLICK '=' definidor_triger
  109                   | ONMOUSEOVER '=' definidor_triger
  110                   | ONMOUSEOUT '=' definidor_triger
  111                   | ONDBCLICK '=' definidor_triger
  112                   | ONMOUSEMOVE '=' definidor_triger
  113                   | WGRAFICA '=' IDENTIFICADOR ',' NUMERO ',' NUMERO ',' NUMERO ',' NUMERO ',' NUMERO
  114                   | definidor_boton
  115                   | BOTONERA '=' IDENTIFICADOR
  116                   | BOTONERA '=' IDENTIFICADOR ',' NUMERO ',' NUMERO ',' NUMERO ',' NUMERO lista_botones
  117                   | INCLUDE '=' IDENTIFICADOR
  118                   | AJAX '(' IDENTIFICADOR ',' cadena_parser ',' cadena_parser ',' cadena_parser ',' cadena_parser ',' cadena_parser ',' NUMERO ')'
  119                   | SIDEBAROCULTO
  120                   | SIDEBARVISIBLE
  121                   | COMPONENTE '(' IDENTIFICADOR ',' cadena_parser ',' cadena_parser ',' cadena_parser ',' cadena_parser ',' NUMERO ')'

  122 modificador_boton: INCLUDECSS '=' cadena_parser
  123                  | ESTILOCSS '=' cadena_parser
  124                  | BOTONOCULTO '=' NUMERO
  125                  | BOTONDISABLED '=' NUMERO

  126 modificadores_boton: ',' modificador_boton modificadores_boton
  127                    | /* vacío */

  128 nombre_boton: BOTON '=' IDENTIFICADOR ','

  129 nombre_boton_dupl: BOTON '=' IDENTIFICADOR

  130 definidor_boton: nombre_boton_dupl
  131                | nombre_boton NUMERO ',' NUMERO ',' NUMERO ',' NUMERO ',' cadena_parser ',' IDENTIFICADOR ',' nombre_tecla modificadores_boton
  132                | nombre_boton NUMERO ',' NUMERO ',' NUMERO ',' NUMERO ',' cadena_parser ',' IDENTIFICADOR ',' nombre_tecla ',' cadena_parser modificadores_boton

  133 lista_botones: ',' IDENTIFICADOR lista_botones
  134              | /* vacío */

  135 identificador_triger: IDENTIFICADOR

  136 definicion_triger: lista_mod_triger identificador_triger
  137                  | lista_mod_triger identificador_triger '(' lista_parametros ')'
  138                  | TNULL

  139 modificador_triger: '-'
  140                   | '$'
  141                   | '%'
  142                   | '@'
  143                   | '+'
  144                   | '!'
  145                   | '&'

  146 lista_mod_triger: modificador_triger lista_mod_triger
  147                 | /* vacío */

  148 triger_protegido: condicion_proteccion ',' definicion_triger
  149                 | definicion_triger

  150 definidor_triger: triger_protegido

  151 lista_parametros: parametro
  152                 | lista_parametros ',' parametro

  153 parametro: cadena_parser
  154          | definicion_triger

  155 modificadores_campo: ',' modificador_campo modificadores_campo
  156                    | /* vacío */

  157 lista_privilegios: cadena_parser
  158                  | cadena_parser ',' lista_privilegios

  159 condicion_proteccion: PROTECT
  160                     | PROTECT '(' lista_privilegios ')'

  161 modificador_where: WHERE '='

  162 opciones_combox: cadena_parser
  163                | cadena_parser ',' opciones_combox

  164 modificador_campo: NOENTER
  165                  | NOENTER '(' lista_privilegios ')'
  166                  | INCLUDECSS '=' cadena_parser
  167                  | ESTILOCSS '=' cadena_parser
  168                  | NOINPUT
  169                  | NOINPUT '(' lista_privilegios ')'
  170                  | modificador_where texto_sql
  171                  | AUTOENTER
  172                  | UPPER
  173                  | LOWER
  174                  | MIXED
  175                  | TRADUCIBLE
  176                  | TRADUCIBLE '(' cadena_parser ')'
  177                  | TOOLTIP '(' cadena_parser ')'
  178                  | FUNTOOLTIP '=' definidor_triger
  179                  | NOPREF
  180                  | AUXILIAR
  181                  | NOUPDATE
  182                  | NOUPDATE '(' lista_privilegios ')'
  183                  | UPDATE
  184                  | UPDATE '(' lista_privilegios ')'
  185                  | SCAN
  186                  | SCAN '(' NUMERO ')'
  187                  | PREFIJO '=' IDENTIFICADOR
  188                  | AUTOTRANSMIT
  189                  | condicion_proteccion
  190                  | DISPLAY
  191                  | DISPLAY '(' lista_privilegios ')'
  192                  | VIRTUAL
  193                  | VIRTUAL '(' cadena_parser ')'
  194                  | OCULTO
  195                  | cadena_parser
  196                  | TITULO '(' cadena_parser ')'
  197                  | WPOSX '=' NUMERO
  198                  | WPOSY '=' NUMERO
  199                  | WLONX '=' NUMERO
  200                  | WLONY '=' NUMERO
  201                  | POSTCHANGE '=' definidor_triger
  202                  | CONTEXTUAL '=' definidor_triger
  203                  | PREFIELD '=' definidor_triger
  204                  | POSTFIELD '=' definidor_triger
  205                  | PREPINTA '=' definidor_triger
  206                  | POSTPINTA '=' definidor_triger
  207                  | CONVIERTE '=' definidor_triger ';' definidor_triger
  208                  | ONPINTA '=' definidor_triger
  209                  | ONCLICK '=' definidor_triger
  210                  | ONRIGHTCLICK '=' definidor_triger
  211                  | ONCENTERCLICK '=' definidor_triger
  212                  | ONMOUSEOVER '=' definidor_triger
  213                  | ONMOUSEOUT '=' definidor_triger
  214                  | ONDBCLICK '=' definidor_triger
  215                  | ONMOUSEMOVE '=' definidor_triger
  216                  | CHECKBOX '(' cadena_parser ',' cadena_parser ')'
  217                  | COMBOX '(' opciones_combox ')'
  218                  | COMBOXMULTIPLE '(' opciones_combox ')'
  219                  | COMBOXREADONLY
  220                  | COMBOXINDEX '=' NUMERO
  221                  | COMBOXREGPAG '=' NUMERO
  222                  | TECLA '=' nombre_tecla ',' definidor_triger
  223                  | REGPAG '=' NUMERO
  224                  | FICHERO
  225                  | FICHERO '(' cadena_parser ')'

  226 modificador_oracle: nombre_modificador_oracle texto_sql

  227 nombre_modificador_oracle: WHERE '='
  228                          | ORDERBY '='
  229                          | GROUPBY '='
  230                          | HAVING '='
  231                          | SELECT '='

  232 modificador_online: nombre_modificador_online TEXTO_ONLINE

  233 nombre_modificador_online: ONLINE '='

  234 palabra_protegida: NOINSERT
  235                  | NOENTER
  236                  | NODELETE
  237                  | NOUPDATE
  238                  | NOORAINS
  239                  | NOORADEL
  240                  | NOCOMMIT
  241                  | NOLOCK
  242                  | NOQUERY
  243                  | UPDATE
  244                  | INSERT
  245                  | PDELETE
  246                  | SICOMMIT

  247 proteccion_bloque: palabra_protegida
  248                  | palabra_protegida ',' condicion_proteccion
  249                  | condicion_proteccion

  250 nombre_titulo: TITULO '='
  251              | AYUDA '='

  252 definidor_titulo: nombre_titulo TEXTO_TITULO

  253 definidor_cursor: nombre_cursor texto_sql

  254 nombre_cursor: CURSOR '=' IDENTIFICADOR

  255 menu: lista_opciones

  256 lista_opciones: opcion_menu lista_opciones
  257               | opcion_menu

  258 nombre_triger: cadena_parser

  259 triger_cadenas: nombre_triger
  260               | nombre_triger ',' lista_parametros

  261 opcion_menu: OPMENU ',' triger_cadenas
  262            | OPMENU ',' definidor_triger


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 144
'$' (36) 140
'%' (37) 141
'&' (38) 145
'(' (40) 44 65 118 121 137 160 165 169 176 177 182 184 186 191 193
    196 216 217 218 225
')' (41) 44 65 118 121 137 160 165 169 176 177 182 184 186 191 193
    196 216 217 218 225
'+' (43) 143
',' (44) 44 65 72 73 74 75 113 116 118 121 126 128 131 132 133 148
    152 155 158 163 216 222 248 260 261 262
'-' (45) 139
';' (59) 207
'=' (61) 8 9 10 11 13 14 15 16 17 18 28 32 33 34 41 42 43 46 47 48
    49 50 51 52 58 59 60 61 62 63 64 66 71 72 73 74 75 85 86 87 88
    89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
    108 109 110 111 112 113 115 116 117 122 123 124 125 128 129 161
    166 167 178 187 197 198 199 200 201 202 203 204 205 206 207 208
    209 210 211 212 213 214 215 220 221 222 223 227 228 229 230 231
    233 250 251 254
'@' (64) 142
error (256)
PINTADO_PANTALLA (258) 35
OPMENU (259) 261 262
TEXTO_SQL (260) 22
TEXTO_TITULO (261) 252
TEXTO_ONLINE (262) 232
PREINSERT (263) 85
POSTINSERT (264) 87
PREUPDATE (265) 88
POSTUPDATE (266) 89
PREDELETE (267) 90
POSTDELETE (268) 91
PREQUERY (269) 95
POSTQUERY (270) 96
FINQUERY (271) 92
PREREGISTRO (272) 97
POSTREGISTRO (273) 98
PREBLOQUE (274) 93
POSTBLOQUE (275) 94
PREFORM (276) 13
POSTFORM (277) 14
PRECOMMIT (278) 15 99
POSTCOMMIT (279) 16 100
PREROLLBACK (280) 17 101
POSTROLLBACK (281) 18 102
BEGINBLOQUE (282) 34
BEGINBLOQUEFRM (283) 32
BEGINBLOQUEPAN (284) 33
ENDBLOQUE (285) 29 30 31
PADRE (286) 41
TABLA (287) 26 42 43
EXTRAPARSER (288) 44
AYUDA (289) 251
ONLINE (290) 233
POSX (291) 46
POSY (292) 47
LEXCOLOR (293) 66
TITULO (294) 196 250
REGPAG (295) 71 223
CAMPO (296) 25 28
TECLA (297) 75 222
CONTEXTUAL (298) 86 202
FTRIGER (299)
WHERE (300) 161 227
ORDERBY (301) 228
GROUPBY (302) 229
HAVING (303) 230
SELECT (304) 231
CURSOR (305) 254
NOINSERT (306) 234
NOORAINS (307) 238
NOORADEL (308) 239
NOUPDATE (309) 181 182 237
NODELETE (310) 236
NOCOMMIT (311) 240
UPDATE (312) 183 184 243
INSERT (313) 244
PDELETE (314) 245
SICOMMIT (315) 246
NOQUERY (316) 242
NOLOCK (317) 241
AQUERY (318) 78
PQUERY (319) 79
TQUERY (320) 80
SOLOQUERY (321) 81
TIMEOUT (322) 72
NOENTER (323) 164 165 235
NOINPUT (324) 168 169
AUTOENTER (325) 171
UPPER (326) 67 172
LOWER (327) 68 173
MIXED (328) 69 174
AUXILIAR (329) 180
VIRTUAL (330) 192 193
OCULTO (331) 194
LISTA (332)
NOPREF (333) 179
PREFIJO (334) 187
SCAN (335) 185 186
AUTOTRANSMIT (336) 188
POSTCHANGE (337) 201
PREFIELD (338) 203
POSTFIELD (339) 204
PROTECT (340) 159 160
DISPLAY (341) 190 191
PREPINTA (342) 103 205
POSTPINTA (343) 104 206
ONPINTA (344) 105 208
TRADUCIBLE (345) 175 176
TOOLTIP (346) 177
FUNTOOLTIP (347) 178
BOTON (348) 128 129
BOTONERA (349) 115 116
NOROWID (350) 45
TNULL (351) 138
IDENTIFICADOR (352) 24 32 33 34 39 41 42 43 66 113 115 116 117 118
    121 128 129 131 132 133 135 187 254
LEXCADENA (353) 19 20
NUMERO (354) 40 46 47 58 59 60 61 62 63 64 65 71 72 113 116 118 121
    124 125 131 132 186 197 198 199 200 220 221 223
LEXEOF (355)
CHECKBOX (356) 216
ONCLICK (357) 106 209
ONRIGHTCLICK (358) 107 210
ONCENTERCLICK (359) 108 211
ONMOUSEOVER (360) 109 212
ONMOUSEOUT (361) 110 213
ONDBCLICK (362) 111 214
ONMOUSEMOVE (363) 112 215
TITULOCAMPO (364)
COMBOX (365) 217
COMBOXINDEX (366) 220
COMBOXREGPAG (367) 221
CONVIERTE (368) 207
WPOSX (369) 58 197
WPOSY (370) 59 198
WLONX (371) 60 199
WLONY (372) 61 200
WREGPAG (373) 62
WPIXELX (374) 63
WPIXELY (375) 64
INCLUDECSS (376) 8 49 122 166
INCLUDEHTML (377) 10 51
ESTILOCSS (378) 123 167
COMBOXMULTIPLE (379) 218
WFRAME (380) 65
COMBOXREADONLY (381) 219
WPLEGADO (382) 56
WDESPLEGADO (383) 57
WGRAFICA (384) 113
INCLUDEFICHEROCSS (385) 9 50
INCLUDETDCSS (386) 48
WMARCOFRAME (387) 53
WMARCOPESTANNA (388) 54
WSINMARCO (389) 55
BOTONOCULTO (390) 124
BOTONDISABLED (391) 125
INCLUDEFICHEROHTML (392) 11 52
PRETECLA (393) 73
POSTTECLA (394) 74
AJAX (395) 118
SIDEBAROCULTO (396) 119
SIDEBARVISIBLE (397) 120
COMPONENTE (398) 121
FICHERO (399) 27 224 225
INCLUDE (400) 117


No terminales con las reglas donde aparecen

$accept (158)
    en la izquierda: 0
modulo (159)
    en la izquierda: 1 2 3, en la derecha: 0
lista_frm (160)
    en la izquierda: 4 5, en la derecha: 1 4
definidor_frm (161)
    en la izquierda: 6 7 8 9 10 11 12, en la derecha: 4
triger_form (162)
    en la izquierda: 13 14 15 16 17 18, en la derecha: 7
unacadena_parser (163)
    en la izquierda: 19 20, en la derecha: 21
cadena_parser (164)
    en la izquierda: 21, en la derecha: 8 9 10 11 20 44 48 49 50 51
    52 65 118 121 122 123 131 132 153 157 158 162 163 166 167 176 177
    193 195 196 216 225 258
texto_sql (165)
    en la izquierda: 22, en la derecha: 170 226 253
definidor_campo (166)
    en la izquierda: 23, en la derecha: 6 83
nombrecampo (167)
    en la izquierda: 24 25 26 27, en la derecha: 28
nombre_campo (168)
    en la izquierda: 28, en la derecha: 23
definidor_bloque (169)
    en la izquierda: 29 30 31, en la derecha: 12
nombre_bloqueinter (170)
    en la izquierda: 32, en la derecha: 30
nombre_bloquepan (171)
    en la izquierda: 33, en la derecha: 31
nombre_bloque (172)
    en la izquierda: 34, en la derecha: 29
pintado_pantalla (173)
    en la izquierda: 35, en la derecha: 36
cuerpo_bloque (174)
    en la izquierda: 36, en la derecha: 3 29 31
modificadores_bloque (175)
    en la izquierda: 37 38, en la derecha: 30 36 37
nombre_tecla (176)
    en la izquierda: 39 40, en la derecha: 73 74 75 131 132 222
modificador_bloque (177)
    en la izquierda: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
    78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98
    99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114
    115 116 117 118 119 120 121, en la derecha: 37
modificador_boton (178)
    en la izquierda: 122 123 124 125, en la derecha: 126
modificadores_boton (179)
    en la izquierda: 126 127, en la derecha: 126 131 132
nombre_boton (180)
    en la izquierda: 128, en la derecha: 131 132
nombre_boton_dupl (181)
    en la izquierda: 129, en la derecha: 130
definidor_boton (182)
    en la izquierda: 130 131 132, en la derecha: 114
lista_botones (183)
    en la izquierda: 133 134, en la derecha: 116 133
identificador_triger (184)
    en la izquierda: 135, en la derecha: 136 137
definicion_triger (185)
    en la izquierda: 136 137 138, en la derecha: 148 149 154
modificador_triger (186)
    en la izquierda: 139 140 141 142 143 144 145, en la derecha: 146
lista_mod_triger (187)
    en la izquierda: 146 147, en la derecha: 136 137 146
triger_protegido (188)
    en la izquierda: 148 149, en la derecha: 150
definidor_triger (189)
    en la izquierda: 150, en la derecha: 13 14 15 16 17 18 72 73 74
    75 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103
    104 105 106 107 108 109 110 111 112 178 201 202 203 204 205 206
    207 208 209 210 211 212 213 214 215 222 262
lista_parametros (190)
    en la izquierda: 151 152, en la derecha: 137 152 260
parametro (191)
    en la izquierda: 153 154, en la derecha: 151 152
modificadores_campo (192)
    en la izquierda: 155 156, en la derecha: 23 155
lista_privilegios (193)
    en la izquierda: 157 158, en la derecha: 158 160 165 169 182 184
    191
condicion_proteccion (194)
    en la izquierda: 159 160, en la derecha: 148 189 248 249
modificador_where (195)
    en la izquierda: 161, en la derecha: 170
opciones_combox (196)
    en la izquierda: 162 163, en la derecha: 163 217 218
modificador_campo (197)
    en la izquierda: 164 165 166 167 168 169 170 171 172 173 174 175
    176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191
    192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207
    208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223
    224 225, en la derecha: 155
modificador_oracle (198)
    en la izquierda: 226, en la derecha: 77
nombre_modificador_oracle (199)
    en la izquierda: 227 228 229 230 231, en la derecha: 226
modificador_online (200)
    en la izquierda: 232, en la derecha: 82
nombre_modificador_online (201)
    en la izquierda: 233, en la derecha: 232
palabra_protegida (202)
    en la izquierda: 234 235 236 237 238 239 240 241 242 243 244 245
    246, en la derecha: 247 248
proteccion_bloque (203)
    en la izquierda: 247 248 249, en la derecha: 76
nombre_titulo (204)
    en la izquierda: 250 251, en la derecha: 252
definidor_titulo (205)
    en la izquierda: 252, en la derecha: 70
definidor_cursor (206)
    en la izquierda: 253, en la derecha: 84
nombre_cursor (207)
    en la izquierda: 254, en la derecha: 253
menu (208)
    en la izquierda: 255, en la derecha: 2
lista_opciones (209)
    en la izquierda: 256 257, en la derecha: 255 256
nombre_triger (210)
    en la izquierda: 258, en la derecha: 259 260
triger_cadenas (211)
    en la izquierda: 259 260, en la derecha: 261
opcion_menu (212)
    en la izquierda: 261 262, en la derecha: 256 257


estado 0

    0 $accept: . modulo $end

    PINTADO_PANTALLA    desplazar e ir al estado 1
    OPMENU              desplazar e ir al estado 2
    PREFORM             desplazar e ir al estado 3
    POSTFORM            desplazar e ir al estado 4
    PRECOMMIT           desplazar e ir al estado 5
    POSTCOMMIT          desplazar e ir al estado 6
    PREROLLBACK         desplazar e ir al estado 7
    POSTROLLBACK        desplazar e ir al estado 8
    BEGINBLOQUE         desplazar e ir al estado 9
    BEGINBLOQUEFRM      desplazar e ir al estado 10
    BEGINBLOQUEPAN      desplazar e ir al estado 11
    CAMPO               desplazar e ir al estado 12
    INCLUDECSS          desplazar e ir al estado 13
    INCLUDEHTML         desplazar e ir al estado 14
    INCLUDEFICHEROCSS   desplazar e ir al estado 15
    INCLUDEFICHEROHTML  desplazar e ir al estado 16

    $default  reduce usando la regla 5 (lista_frm)

    modulo              ir al estado 17
    lista_frm           ir al estado 18
    definidor_frm       ir al estado 19
    triger_form         ir al estado 20
    definidor_campo     ir al estado 21
    nombre_campo        ir al estado 22
    definidor_bloque    ir al estado 23
    nombre_bloqueinter  ir al estado 24
    nombre_bloquepan    ir al estado 25
    nombre_bloque       ir al estado 26
    pintado_pantalla    ir al estado 27
    cuerpo_bloque       ir al estado 28
    menu                ir al estado 29
    lista_opciones      ir al estado 30
    opcion_menu         ir al estado 31


estado 1

   35 pintado_pantalla: PINTADO_PANTALLA .

    $default  reduce usando la regla 35 (pintado_pantalla)


estado 2

  261 opcion_menu: OPMENU . ',' triger_cadenas
  262            | OPMENU . ',' definidor_triger

    ','  desplazar e ir al estado 32


estado 3

   13 triger_form: PREFORM . '=' definidor_triger

    '='  desplazar e ir al estado 33


estado 4

   14 triger_form: POSTFORM . '=' definidor_triger

    '='  desplazar e ir al estado 34


estado 5

   15 triger_form: PRECOMMIT . '=' definidor_triger

    '='  desplazar e ir al estado 35


estado 6

   16 triger_form: POSTCOMMIT . '=' definidor_triger

    '='  desplazar e ir al estado 36


estado 7

   17 triger_form: PREROLLBACK . '=' definidor_triger

    '='  desplazar e ir al estado 37


estado 8

   18 triger_form: POSTROLLBACK . '=' definidor_triger

    '='  desplazar e ir al estado 38


estado 9

   34 nombre_bloque: BEGINBLOQUE . '=' IDENTIFICADOR

    '='  desplazar e ir al estado 39


estado 10

   32 nombre_bloqueinter: BEGINBLOQUEFRM . '=' IDENTIFICADOR

    '='  desplazar e ir al estado 40


estado 11

   33 nombre_bloquepan: BEGINBLOQUEPAN . '=' IDENTIFICADOR

    '='  desplazar e ir al estado 41


estado 12

   28 nombre_campo: CAMPO . '=' nombrecampo

    '='  desplazar e ir al estado 42


estado 13

    8 definidor_frm: INCLUDECSS . '=' cadena_parser

    '='  desplazar e ir al estado 43


estado 14

   10 definidor_frm: INCLUDEHTML . '=' cadena_parser

    '='  desplazar e ir al estado 44


estado 15

    9 definidor_frm: INCLUDEFICHEROCSS . '=' cadena_parser

    '='  desplazar e ir al estado 45


estado 16

   11 definidor_frm: INCLUDEFICHEROHTML . '=' cadena_parser

    '='  desplazar e ir al estado 46


estado 17

    0 $accept: modulo . $end

    $end  desplazar e ir al estado 47


estado 18

    1 modulo: lista_frm .

    $default  reduce usando la regla 1 (modulo)


estado 19

    4 lista_frm: definidor_frm . lista_frm

    PREFORM             desplazar e ir al estado 3
    POSTFORM            desplazar e ir al estado 4
    PRECOMMIT           desplazar e ir al estado 5
    POSTCOMMIT          desplazar e ir al estado 6
    PREROLLBACK         desplazar e ir al estado 7
    POSTROLLBACK        desplazar e ir al estado 8
    BEGINBLOQUE         desplazar e ir al estado 9
    BEGINBLOQUEFRM      desplazar e ir al estado 10
    BEGINBLOQUEPAN      desplazar e ir al estado 11
    CAMPO               desplazar e ir al estado 12
    INCLUDECSS          desplazar e ir al estado 13
    INCLUDEHTML         desplazar e ir al estado 14
    INCLUDEFICHEROCSS   desplazar e ir al estado 15
    INCLUDEFICHEROHTML  desplazar e ir al estado 16

    $default  reduce usando la regla 5 (lista_frm)

    lista_frm           ir al estado 48
    definidor_frm       ir al estado 19
    triger_form         ir al estado 20
    definidor_campo     ir al estado 21
    nombre_campo        ir al estado 22
    definidor_bloque    ir al estado 23
    nombre_bloqueinter  ir al estado 24
    nombre_bloquepan    ir al estado 25
    nombre_bloque       ir al estado 26


estado 20

    7 definidor_frm: triger_form .

    $default  reduce usando la regla 7 (definidor_frm)


estado 21

    6 definidor_frm: definidor_campo .

    $default  reduce usando la regla 6 (definidor_frm)


estado 22

   23 definidor_campo: nombre_campo . modificadores_campo

    ','  desplazar e ir al estado 49

    $default  reduce usando la regla 156 (modificadores_campo)

    modificadores_campo  ir al estado 50


estado 23

   12 definidor_frm: definidor_bloque .

    $default  reduce usando la regla 12 (definidor_frm)


estado 24

   30 definidor_bloque: nombre_bloqueinter . modificadores_bloque ENDBLOQUE

    $default  reduce usando la regla 38 (modificadores_bloque)

    modificadores_bloque  ir al estado 51


estado 25

   31 definidor_bloque: nombre_bloquepan . cuerpo_bloque ENDBLOQUE

    PINTADO_PANTALLA  desplazar e ir al estado 1

    pintado_pantalla  ir al estado 27
    cuerpo_bloque     ir al estado 52


estado 26

   29 definidor_bloque: nombre_bloque . cuerpo_bloque ENDBLOQUE

    PINTADO_PANTALLA  desplazar e ir al estado 1

    pintado_pantalla  ir al estado 27
    cuerpo_bloque     ir al estado 53


estado 27

   36 cuerpo_bloque: pintado_pantalla . modificadores_bloque

    $default  reduce usando la regla 38 (modificadores_bloque)

    modificadores_bloque  ir al estado 54


estado 28

    3 modulo: cuerpo_bloque .

    $default  reduce usando la regla 3 (modulo)


estado 29

    2 modulo: menu .

    $default  reduce usando la regla 2 (modulo)


estado 30

  255 menu: lista_opciones .

    $default  reduce usando la regla 255 (menu)


estado 31

  256 lista_opciones: opcion_menu . lista_opciones
  257               | opcion_menu .

    OPMENU  desplazar e ir al estado 2

    $default  reduce usando la regla 257 (lista_opciones)

    lista_opciones  ir al estado 55
    opcion_menu     ir al estado 31


estado 32

  261 opcion_menu: OPMENU ',' . triger_cadenas
  262            | OPMENU ',' . definidor_triger

    PROTECT    desplazar e ir al estado 56
    TNULL      desplazar e ir al estado 57
    LEXCADENA  desplazar e ir al estado 58
    '-'        desplazar e ir al estado 59
    '$'        desplazar e ir al estado 60
    '%'        desplazar e ir al estado 61
    '@'        desplazar e ir al estado 62
    '+'        desplazar e ir al estado 63
    '!'        desplazar e ir al estado 64
    '&'        desplazar e ir al estado 65

    $default  reduce usando la regla 147 (lista_mod_triger)

    unacadena_parser      ir al estado 66
    cadena_parser         ir al estado 67
    definicion_triger     ir al estado 68
    modificador_triger    ir al estado 69
    lista_mod_triger      ir al estado 70
    triger_protegido      ir al estado 71
    definidor_triger      ir al estado 72
    condicion_proteccion  ir al estado 73
    nombre_triger         ir al estado 74
    triger_cadenas        ir al estado 75


estado 33

   13 triger_form: PREFORM '=' . definidor_triger

    PROTECT  desplazar e ir al estado 56
    TNULL    desplazar e ir al estado 57
    '-'      desplazar e ir al estado 59
    '$'      desplazar e ir al estado 60
    '%'      desplazar e ir al estado 61
    '@'      desplazar e ir al estado 62
    '+'      desplazar e ir al estado 63
    '!'      desplazar e ir al estado 64
    '&'      desplazar e ir al estado 65

    $default  reduce usando la regla 147 (lista_mod_triger)

    definicion_triger     ir al estado 68
    modificador_triger    ir al estado 69
    lista_mod_triger      ir al estado 70
    triger_protegido      ir al estado 71
    definidor_triger      ir al estado 76
    condicion_proteccion  ir al estado 73


estado 34

   14 triger_form: POSTFORM '=' . definidor_triger

    PROTECT  desplazar e ir al estado 56
    TNULL    desplazar e ir al estado 57
    '-'      desplazar e ir al estado 59
    '$'      desplazar e ir al estado 60
    '%'      desplazar e ir al estado 61
    '@'      desplazar e ir al estado 62
    '+'      desplazar e ir al estado 63
    '!'      desplazar e ir al estado 64
    '&'      desplazar e ir al estado 65

    $default  reduce usando la regla 147 (lista_mod_triger)

    definicion_triger     ir al estado 68
    modificador_triger    ir al estado 69
    lista_mod_triger      ir al estado 70
    triger_protegido      ir al estado 71
    definidor_triger      ir al estado 77
    condicion_proteccion  ir al estado 73


estado 35

   15 triger_form: PRECOMMIT '=' . definidor_triger

    PROTECT  desplazar e ir al estado 56
    TNULL    desplazar e ir al estado 57
    '-'      desplazar e ir al estado 59
    '$'      desplazar e ir al estado 60
    '%'      desplazar e ir al estado 61
    '@'      desplazar e ir al estado 62
    '+'      desplazar e ir al estado 63
    '!'      desplazar e ir al estado 64
    '&'      desplazar e ir al estado 65

    $default  reduce usando la regla 147 (lista_mod_triger)

    definicion_triger     ir al estado 68
    modificador_triger    ir al estado 69
    lista_mod_triger      ir al estado 70
    triger_protegido      ir al estado 71
    definidor_triger      ir al estado 78
    condicion_proteccion  ir al estado 73


estado 36

   16 triger_form: POSTCOMMIT '=' . definidor_triger
